# typing_speed_tester

./: CMakeLists.txt  database.cpp  database.h  identifier.sqlite  main.cpp  main.h  text.h
interface/: interface.cpp  interface.h  interface.ui
text_creating/: text.cpp  text.h
text_creating/database/: database.cpp  database.h
